--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-/.idea/.gitignore
-/.idea/aws.xml
-/.idea/flask_portfolio.iml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/vcs.xml
-/.idea/*
+.idea
+*.iws
+*.iml
+*.ipr
+*.xml
