--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 .idea/**/shelf
 .idea/**/aws.xml
 .idea/**/contentModel.xml
+
+node_modules
+/node_modules/.package-lock.json
+/static/scss/custom.css.map
+/package.json
+/package-lock.json
