--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-.idea/**/aws.xml
-.idea/**/contentModel.xml
-
+### Exclude IntelliJ IDEA from GitHub ###
+.idea
+*.iws
+*.iml
+*.ipr
+*.xml
 node_modules
 /node_modules/.package-lock.json
 /static/scss/custom.css.map
