--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+theme: pages-themes/midnight@v0.2.0
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme 
+title: LEVSS Study Tools
+description: This is our PBL Project for Trimester 2. We are creating a study tools website that will have a broad collection of tools and programs in order to help students, specifically Del Norte students, study and prepare for their classes and understand concepts. Overall, it is meant to ease high school life. 
