--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-merlot
 title: Food Information
 description: A way to track the team food progress
 markdown: kramdown
