--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,12 @@ SQLAlchemy~=1.3.24
 Werkzeug~=1.0.1
 flask_login
 Flask
-numpy
+numpy~=1.21.5
 flask-sqlalchemy==2.1.0
 flask_migrate
 flask_restful
 numpy~=1.21.4
+
+pathlib~=1.0.1
+Wand~=0.6.7
+palindrome~=1.0.0
