--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-flask~=1.1.2
-requests~=2.25.1
-SQLAlchemy~=1.3.24
-Werkzeug~=1.0.1
+flask
+requests
+SQLAlchemy
+Werkzeug
 flask_login
 Flask
-numpy~=1.21.5
-flask-sqlalchemy==2.1.0
+numpy
+flask-sqlalchemy
 flask_migrate
 flask_restful
-numpy~=1.21.4
+numpy
 
-pathlib~=1.0.1
-palindrome~=1.0.0
+pathlib
+palindrome
