--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
                         - "8086:8080"
                 volumes:
                         - persistent_volume:/app/volumes
+                restart: unless-stopped
 volumes:
   persistent_volume:
     driver: local
