relative bind to volume, eliminating path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,5 @@ services:
                 ports:
                         - "8086:8080"
                 volumes:
-                        - persistent_volume:/app/volumes
+                        - ./volumes:/volumes
                 restart: unless-stopped
-volumes:
-  persistent_volume:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: /home/ubuntu/flask_portfolio/volumes
