--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ env.bak/
 venv.bak/
 
 # instance data, databases
-volumes/sqlite.db
 instance/volumes/sqlite.db
+instance/volumes/sqlite-backup.db
+instance/volumes/sqlite-backup*
 migrations/
